# opshin

./: .gitignore  .pre-commit-config.yaml  .travis.yml  AGENTS.md  ARCHITECTURE.md  BUG_BOUNTY.md  LICENSE.txt  README.md  autodoc.config.json  build_docs.sh  compiler.py  mkdocs.yml  pyproject.toml  pyscc.py  requirements.txt  setup.py  test.py  type_inference.py
.codex/environments/: environment.toml
.github/: FUNDING.yml  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/scripts/: run-tests.sh
.github/workflows/: binary-size-tracker.yml  build_docs.yml  python-publish.yml  release.yml  tests.yml
bench/: plutus.json  test.sh
docs/: .gitignore  CNAME  README.md  _config.yml  binary_size_tracker.md  binary_size_trends.html  binary_size_trends.template.html  config.mako  github-corner.mako  html.mako  index.html  index.js  logo.mako
docs/eopsin/: compiler.html  compiler.md  index.html  index.md  module.md  prelude.html  prelude.md  type_inference.html  type_inference.md  typed_ast.html  typed_ast.md  util.html  util.md
docs/opshin/: bridge.html  builder.html  compiler.html  compiler_config.html  fun_impls.html  index.html  prelude.html  type_impls.html  type_inference.html  typed_ast.html  types.html  util.html
eopsin/: __init__.py  __main__.py  compiler.py  prelude.py  rewrite_augassign.py  rewrite_dataclass.py  rewrite_import.py  rewrite_import_dataclasses.py  rewrite_import_plutusdata.py  rewrite_import_typing.py  rewrite_inject_builtins.py  rewrite_plutusdata.py  rewrite_tuple_assign.py  tx_tools.py  type_inference.py  typed_ast.py  util.py
eopsin/ledger/: interval.py
eopsin/optimize/: optimize_remove_deadvars.py  optimize_remove_pass.py  optimize_varlen.py
eopsin/rewrite/: rewrite_forbidden_overwrites.py  rewrite_import.py  rewrite_import_dataclasses.py  rewrite_import_hashlib.py  rewrite_import_plutusdata.py  rewrite_import_typing.py  rewrite_inject_builtin_constr.py  rewrite_inject_builtins.py  rewrite_remove_type_stuff.py  rewrite_tuple_assign.py
eopsin/std/: fractions.py  math.py
eopsin/tests/: test_builtins.py  test_misc.py  test_ops.py  test_stdlib.py
examples/: access_shared_field.py  broken.py  complex_datum.py  datum_cast.py  dict_comprehensions.py  dict_datum.py  extract_datum.py  fib_iter.py  fib_rec.py  hello_world.py  inspect_script_context.py  list_comprehensions.py  list_datum.py  mult_for.py  mult_while.py  real_sc.py  sample.py  showcase.py  sum.py  sum_sc.py
examples/a_introduction/: a_hello_world.py  b_mult_for.py  c_mult_while.py  d_fib_iter.py  e_fib_rec.py  f_branching.py  g_strict_typing.py
examples/b_datums/: a_complex_datum.py  b_extract_datum.py  c_dict_datum.py  d_list_datum.py
examples/c_advanced/: a_list_comprehensions.py  b_datum_cast.py  c_showcase.py
examples/performance_tests/: sum_of_range_for.py  sum_of_range_listcomp.py  sum_of_range_while.py
examples/smart_contracts/: adahandle.py  always_true.py  assert_foo_none.py  assert_none.py  assert_sum.py  bitwise.py  dual_use.py  flashloan.py  gift.py  inspect_script_context.py  liquidity_pool.py  lp_minting_policy.py  marketplace.py  micropayments.py  nft_marketplace_validator.py  nft_minting_policy.py  parameterized.py  pool_validator.py  simple_script.py  simple_token.py  universal_minting_policy.py  vesting.py  wrapped_token.py
examples/vesting_oracle_fee/: .gitignore  README.md  distribute_funds.py  requirements.txt
hooks/: hook-uplc.py
opshin/: __init__.py  __main__.py  bridge.py  build.py  builder.py  compiler.py  compiler_config.py  contract_interface.py  fun_impls.py  prelude.py  prelude_v3.py  type_impls.py  type_inference.py  typed_ast.py  typed_util.py  types.py  util.py
opshin/ledger/: __init__.py  api_v2.py  api_v3.py  interval.py
opshin/optimize/: __init__.py  optimize_const_folding.py  optimize_fold_bool.py  optimize_fold_if_fallthrough.py  optimize_inline_constvars.py  optimize_inline_expressions.py  optimize_remove_deadconds.py  optimize_remove_deadconstants.py  optimize_remove_deadvars.py  optimize_remove_pass.py  optimize_remove_trace.py  optimize_remove_unreachable.py  optimize_rewrite_expanded_union_calls.py  optimize_rewrite_function_closures.py  optimize_selective_narrowing_rebind.py  optimize_union_expansion.py  optimize_varlen.py
opshin/rewrite/: rewrite_adjacent_inline.py  rewrite_annotate_fallthrough.py  rewrite_assert_none.py  rewrite_augassign.py  rewrite_cast_condition.py  rewrite_comparison_chaining.py  rewrite_contract_methods.py  rewrite_destructuring_assign.py  rewrite_empty_dicts.py  rewrite_empty_lists.py  rewrite_expanded_union_calls.py  rewrite_forbidden_overwrites.py  rewrite_forbidden_return.py  rewrite_function_closures.py  rewrite_import.py  rewrite_import_bls12_381.py  rewrite_import_cast.py  rewrite_import_dataclasses.py  rewrite_import_hashlib.py  rewrite_import_plutusdata.py  (+14 more)
pyscc/: compiler.py  pluto_ast.py  prelude.py  rewrite_attributes.py  rewrite_augassign.py  rewrite_dataclass.py  rewrite_for.py  rewrite_tuple_assign.py  type_inference.py  typed_ast.py  uplc_ast.py
scripts/: binary_size_config.yaml  binary_size_tracker.py  cbor_to_plutus.py  check_binary_sizes.py  fetch_binary_data.py  flat_to_cbor.py  flat_to_plutus.py  hex_to_bytes.py  pluto_to_cbor.sh  python_to_plutus.sh  python_to_plutus_via_aiken.sh  python_to_plutus_via_pluto.sh  recompute_selective_rebind_thresholds.py  rewrite_union_types.py  run_opshin.py  uplc_to_cbor.sh  uplc_to_flat.sh
tests/: __init__.py  test_Unions.py  test_assert_none.py  test_binary_size_tools.py  test_boolop_type_assertion_vulnerability.py  test_bridge.py  test_builtins.py  test_class_methods.py  test_contract_class.py  test_copy_only_attributes_bug.py  test_hashlib.py  test_instance_class_distinction.py  test_integrity.py  test_keywords.py  test_loops.py  test_main.py  test_misc.py  test_ops.py  test_param_parsing.py  test_plutus_data_conversion.py  test_recursion.py  test_slice_upper_bound_fix.py  test_stdlib.py  test_types.py  test_uplc_patch.py  uplc_patch.py  utils.py
wrapped_token/: mainnet.addr  script.policy_id  testnet.addr
(+313 files in other folders)
